Pasta de imagens adicionada. Receita de arroz completada com ingredientes e passos.

--- a/Recipes/arroz.html
+++ b/Recipes/arroz.html
@@ -6,9 +6,31 @@
     <title>Receita de arroz</title>
 </head>
 <body>
-    <a href="index.html">Odin recipes</a>
+    <a href="../index.html">Odin recipes</a>
     <h1>Arroz branco</h1>
-    
-    
+    <img src="../img/rice.jpg" alt="Pote de arroz branco com uma pequena folha de coentro emcima.">
+    <p>Nesta receita iremos te ensinar a fazer um arroz branco soltinho e saboroso!</p>
+    <h3>Ingredientes:</h3>
+        <ul>
+            <li>3 xicaras de arroz branco.</li>   
+            <li>1 colher de sopa de sal.</li> 
+            <li>4 dentes de alho.</li>
+            <li>1 colher de sopa de oleo</li>
+            <li>Meia cebola.</li>
+        </ul>
+    <h3>Passos:</h3>
+        <ol>
+            <li>Lave o arroz e deixe secando.</li>
+            <li>Pique a cebola e o alho.</li>
+            <li>Em uma panela em fogo baixo, coloque o oleo e a cebola e 
+                espere ate que a cebola comece a ficar trasnparente.</li>
+            <li>Coloque o arroz, alho e sal. Mecha ate que o arroz comece a grudar no fundo da panela,
+                e então ponha agua.</li>    
+            <li>Coloque agua so o suficiente para cobrir o arroz. Quando  secar coloque agua novamente
+                e se mantenha atento para que a agua seque com o fogo ligado. </li>
+            <li>So servir!</li>           
+        </ol>
+
+
 </body>
 </html>
