Mudanças: 1.Paginas das receitas de agua_fervida e batata_frita adicionada, porem incompletas. 2.Mudança das linguas dos sites para pt-br. 3.Rel de 'noopener' add aos links da pagina index.

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,7 +8,9 @@
 <body>
     <h1>Odin recipes</h1>
     <ul>
-    <a href="Recipes/arroz.html" >Arroz Branco</a>
+        <li><a href="Recipes/arroz.html" rel="noopener">Arroz branco</a></li>
+        <li><a href="Recipes/batata_frita.html" rel="noopener">Batata frita</a></li>
+        <li><a href="Recipes/agua_fervida.html" rel="noopener">Agua fervida</a></li>
     </ul>
     
 </body>
